syntax = "proto3";

package schema.proto.v1;

option go_package = "github.com/t-yamakoshi/go-grpc-sample/pkg/adapter/grpcgen";

service TodoService {
  // Create a new Todo item
  rpc CreateTodo(CreateTodoRequest) returns (CreateTodoResponse);

  // Get a Todo item by ID
  rpc GetTodo(GetTodoRequest) returns (GetTodoResponse);

  // Update an existing Todo item
  rpc UpdateTodo(UpdateTodoRequest) returns (UpdateTodoResponse);

  // Delete a Todo item by ID
  rpc DeleteTodo(DeleteTodoRequest) returns (DeleteTodoResponse);

  // List all Todo items
  rpc ListTodos(ListTodosRequest) returns (ListTodosResponse);
}

message Todo {
  string id = 1;
  string title = 2;
  string description = 3;
  bool is_completed = 4;
}

message CreateTodoRequest {
  string title = 1;
  string description = 2;
}

message CreateTodoResponse {
  Todo todo = 1;
}

message GetTodoRequest {
  string id = 1;
}

message GetTodoResponse {
  Todo todo = 1;
}

message UpdateTodoRequest {
  string id = 1;
  string title = 2;
  string description = 3;
  bool is_completed = 4;
}

message UpdateTodoResponse {
  Todo todo = 1;
}

message DeleteTodoRequest {
  string id = 1;
}

message DeleteTodoResponse {
  string id = 1;
}

message ListTodosRequest {}

message ListTodosResponse {
  repeated Todo todos = 1;
}
